--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,15 @@
 <br>
 <h1><%= @article.title %></h1>
 <p><%= @article.context %></p>
-
-<%= link_to 'Go Back to all articles', articles_path %>
+<p>
+  <%= link_to 'edit this article', edit_article_path %>
+</p>
+<p>
+  <%= link_to 'remove this article', 
+              article_path(@article),
+              method: :delete, 
+              data: { confirm: "Are you sure?" } %>
+</p>
+<p>
+  <%= link_to 'Go Back to all articles', articles_path %>
+</p>
