--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,15 +1,2 @@
 <h1>Edit this Article</h1>
-
-<%= form_for(@article) do |f| %>
-  <p>
-    <%= f.label :title %>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :context %>
-    <%= f.text_field :context %>
-  </p>
-  <%= f.submit %>
-<% end %>
-<br>
-<%= link_to 'Back to MY articles', articles_path %>
+<%= render "form", article: @article %>
